--- a/session/build.gradle
+++ b/session/build.gradle
@@ -18,7 +18,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
 
-    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+//    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
     compile group: 'com.github.kstyrc', name: 'embedded-redis', version: '0.6'
 
     implementation 'org.springframework.boot:spring-boot-starter-data-couchbase'
