주문 조회 V3.1: 엔티티를 DTO로 변환 - 페이징과 한계 돌파

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,7 @@ spring:
       hibernate:
         show_sql: true # tip 운영환경서 ㄴㄴ
         format_sql: true
+        default_batch_fetch_size: 1000 # tip N+1문제점, toOne 관계 패치조인 최적화에 사용
     database-platform: org.hibernate.dialect.H2Dialect
 logging:
   level:
